--- a/FinalProjectENTPROG.csproj
+++ b/FinalProjectENTPROG.csproj
@@ -1,8 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>disable</Nullable>
+    <UserSecretsId>5b6d87af-6bdc-43a7-9df9-48a4aaebca38</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
