My Connection String updated

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,8 @@
 {
   "ConnectionStrings": {
-    "MyConnection": "Server=(local);Database=VaccinationDB;Integrated Security=true;MultipleActiveResultSets=true;"
+    "MyConnection": "Data Source=tcp:finalprojectentprogdbserver.database.windows.net,1433;Initial Catalog=VaccinationDB;User Id=nathanlicyayo@finalprojectentprogdbserver;Password=Rj@021292",
+    "MyConnection2": "Server=(local);Database=VaccinationDB;Integrated Security=true;MultipleActiveResultSets=true;"
+
   },
   "Logging": {
     "LogLevel": {
