--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "MyConnection": "Data Source=tcp:finalprojectentprogdbserver.database.windows.net,1433;Initial Catalog=VaccinationDB;User Id=nathanlicyayo@finalprojectentprogdbserver;Password=Rj@021292",
+    "MyConnection": "Server=tcp:finalprojectentprogdbserver.database.windows.net,1433;Initial Catalog=VaccinationDB;User Id=nathanlicyayo@finalprojectentprogdbserver;Password=Rj@021292",
     "MyConnection2": "Server=(local);Database=VaccinationDB;Integrated Security=true;MultipleActiveResultSets=true;"
 
   },
